subpages moved to root

--- a/pagess/about.html
+++ b/pagess/about.html
@@ -46,10 +46,10 @@
               <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
-              <li><a href="web-dev.html">Web Development</a></li>
-              <li><a href="web-des.html">Web Design</a></li>
-              <li><a href="gr-des.html">Graphic Design</a></li>
-              <li><a href="dig-mar.html">Digital Marketing</a></li>
+              <li><a href="web-development.html">Web Development</a></li>
+              <li><a href="web-design.html">Web Design</a></li>
+              <li><a href="graphic-design.html">Graphic Design</a></li>
+              <li><a href="digital-marketing.html">Digital Marketing</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
               <li class="active"><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact</a></li>
