--- a/pagess/web-design.html
+++ b/pagess/web-design.html
@@ -47,10 +47,10 @@
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
               <li><a href="web-development.html">Web Development</a></li>
-              <li><a href="web-design.html">Web Design</a></li>
+              <li class="active"><a href="web-design.html">Web Design</a></li>
               <li><a href="graphic-design.html">Graphic Design</a></li>
               <li><a href="digital-marketing.html">Digital Marketing</a></li>
-              <li class="active"><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -63,136 +63,91 @@
     <div class="header-cont"></div>
     <!-- HEADER END --> 
 
-    <!-- TODO: Here goes your content! -->
-    <section class="container port-sec-one hidden-xs">
+    <section class="container web-des-sec-one hidden-xs">
       <div class="row cl-ac">
-        <div class="col-sm-7 col-md-8">
+        <div class="col-sm-8 col-md-9 ">
           <h2>Get a professional website at an affordable price.</h2>
           <p>
           Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
           </p>
         </div>
-        <div class="col-sm-5 col-md-4">
+        <div class="col-sm-4 col-md-3 ">
           <a href="contact.html">Get a Quote</a>
         </div>
       </div>
     </section>
 
-    <section class="container port-sec-two">
-      <div class="row row-pr">
-        <div class="col-xs-12 col-sm-6 col-sm-push-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc">
-          <div>
-            <h3> Dolor debitis praesentium incidunt quae?  </h3>
-            <p>
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            </p>
-            <a href="#">Read more about this project</a>
-          </div>
-        </div>
-      </div>
-      <div class="row row-pr">
-        <div class="col-xs-12 col-md-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-6 pr-exc">
-          <h3> Dolor debitis praesentium incidunt quae?  </h3>
-          <p>
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          </p>
-          <a href="#">Read more about this project</a>
-        </div>
-      </div>
-      <div class="row row-pr">
-        <div class="col-xs-12 col-sm-6 col-sm-push-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc">
-          <div>
-            <h3> Dolor debitis praesentium incidunt quae?  </h3>
-            <p>
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            </p>
-            <a href="#">Read more about this project</a>
-          </div>
-        </div>
-      </div>
-      <div class="row row-pr">
-        <div class="col-xs-12 col-md-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-6 pr-exc">
-          <h3> Dolor debitis praesentium incidunt quae?  </h3>
-          <p>
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          </p>
-          <a href="#">Read more about this project</a>
-        </div>
-      </div>
-    </section>
-
-
-    <section class="container port-sec-three">
+    <section class="container web-des-sec-two">
       <div class="row">
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/web-development.png" alt="">
-          <h2>Web Development</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/web-dev.html">Learn more</a>
+        <div class="col-sm-8 col-md-9">
+          <div>
+            Lorem earum delectus deserunt dignissimos minus Debitis beatae adipisci temporibus deserunt eveniet In iste ab quis quos quisquam Aliquid consectetur similique corrupti quasi incidunt? Quasi voluptates sit error expedita quos Laboriosam ratione blanditiis quis architecto dignissimos sapiente eos quia dignissimos magnam. Possimus corrupti doloribus aut nostrum illo. Incidunt non vero ut quasi earum! Sapiente aliquam facilis debitis praesentium eius, minima Sit minus ab tenetur omnis expedita. Aliquid sequi temporibus commodi et ipsa laboriosam optio et accusamus. Maxime tempora tempore ut in quaerat Velit cupiditate officiis eaque ipsam quia Voluptatem voluptates aliquid itaque natus odit. Commodi repellat animi cum repellendus optio Molestias fugit expedita quisquam unde fugiat. Magnam aperiam eum illo amet deleniti accusantium. At dicta sequi incidunt fuga ea temporibus Voluptatem dignissimos molestiae nulla beatae ullam dolores, commodi inventore. Accusantium suscipit asperiores autem soluta distinctio. Quam provident at officiis veritatis magni quam Assumenda labore fugiat rerum itaque voluptatem. Consequatur temporibus repellendus maxime consequatur totam atque. Quia totam doloremque quis maiores a magnam. Cumque ipsam optio blanditiis veniam magni. Accusantium enim veniam elit autem libero Dignissimos saepe aut voluptas quos officiis Corrupti dignissimos recusandae ducimus molestias hic nam Quasi natus numquam veritatis quae dolore Magni ut blanditiis dolores vel facere distinctio nostrum, quisquam Commodi ad doloremque deserunt minima hic. Error amet voluptatibus consequatur cumque veritatis corrupti, excepturi. Esse ipsa iusto minus nam rerum commodi? Eligendi laudantium soluta libero quo ut sed? Ratione maiores animi nihil voluptatibus blanditiis itaque, voluptas quaerat! Sed dolore molestias doloremque natus corporis. Sunt odit laudantium quia voluptas ut? Doloribus modi nihil similique consequuntur dignissimos! Provident sint voluptatum eaque nulla eligendi quis optio nobis recusandae Impedit provident libero labore neque consectetur officiis? Ipsum dicta inventore accusamus nihil asperiores! Suscipit velit labore voluptas delectus saepe animi quibusdam facere optio Eos sequi laudantium quidem quod cumque. Perferendis non nostrum sit
+          </div>
         </div>
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/web-design.png" alt="">
-          <h2>Web Design</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/web-des.html">Learn more</a>
-        </div>
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/graphic-design.png" alt="">
-          <h2>Graphic Design</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/gr-des.html">Learn more</a>
-        </div>
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/digital-marketing.png" alt="">
-          <h2>Digital Marketing</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/dig-mar.html">Learn more</a>
+        <section class="container web-des-sec-one visible-xs">
+          <div class="row">
+            <div class="col-sm-8 col-md-9">
+              <h2>Get a professional website at an affordable price.</h2>
+              <p>
+              Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+              </p>
+            </div>
+            <div class="col-sm-4 col-md-3">
+              <a href="contact.html">Get a Quote</a>
+            </div>
+          </div>
+        </section>
+        <div class="col-sm-4 col-md-3">
+          <div class="row">
+            <ul class="side-nav">
+              <li>
+                <a href="#">
+                  <img src="../images/web-development.png" alt="">
+                  <div>
+                    <h3>Web development</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="../images/web-design.png" alt="">
+                  <div>
+                    <h3>Web design</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="../images/graphic-design.png" alt="">
+                  <div>
+                    <h3>Graphic design</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <img src="../images/digital-marketing.png" alt="">
+                  <div>
+                    <h3>Digital marketing</h3>
+                    <span>Read more...</span>
+                  </div>
+                </a>
+                </a>
+              </li>
+              <li>
+                <div>
+                  <p>Call us any time</p>
+                  <p>+353 (0)1 514 35 90</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
-
-
-
-    <section class="port-sec-four">
-      <div class="container">
-        <div class="row cl-ac">
-          <div class="col-sm-7 col-md-8">
-            <h2>Get a professional website at an affordable price.</h2>
-            <p>
-            Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
-            </p>
-          </div>
-          <div class="col-sm-5 col-md-4">
-            <a href="contact.html">Get a Quote</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
 
     <!-- FOOTER --> 
     <footer>
@@ -260,6 +215,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="../scripts/main.js"></script>
+
   </body>
 </html>
 
