--- a/about.html
+++ b/about.html
@@ -39,20 +39,20 @@
             </ul>
           </div>
           <div class="navbar-wrp">
-            <ul id="navbar-soc" class="hidden-xs nav navbar-nav navbar-right">
+            <ul id="navbar-soc" class=" hidden-xs nav navbar-nav navbar-right">
               <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li><a href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a href="#"><i class="fab fa-instagram"></i></a></li>
               <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
-              <li><a href="web-dev.html">Web Development</a></li>
-              <li><a href="web-des.html">Web Design</a></li>
-              <li><a href="gr-des.html">Graphic Design</a></li>
-              <li><a href="dig-mar.html">Digital Marketing</a></li>
+              <li><a href="web-development.html">Web Development</a></li>
+              <li><a href="web-design.html">Web Design</a></li>
+              <li><a href="graphic-design.html">Graphic Design</a></li>
+              <li><a href="digital-marketing.html">Digital Marketing</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
-              <li><a href="about.html">About us</a></li>
-              <li class="active"><a href="contact.html">Contact</a></li>
+              <li class="active"><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -116,7 +116,8 @@
                 <div class="pulse"></div>
               </div>
               <div id="container3" data-toggle="tooltip" data-placement="top" title="" data-original-title="Sevilla, Espania">
-                <div class="dot"></div><div class="pulse"></div>
+                <div class="dot"></div>
+                <div class="pulse"></div>
               </div>
             </div>
           </div>
@@ -126,8 +127,7 @@
         Copyright © 2018 <a href="#" target="_blank" alt="" title=""><img style="width: 78px;" class="block-ceter" src="../images/reachpeak-footer.png">
         </p>
       </div>
-    </footer>
-    <!-- FOOTER END --> 
+    </footer>   <!-- FOOTER END --> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="../scripts/main.js"></script>
