--- a/pagess/graphic-design.html
+++ b/pagess/graphic-design.html
@@ -46,11 +46,11 @@
               <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
-              <li><a href="web-dev.html">Web Development</a></li>
-              <li><a href="web-des.html">Web Design</a></li>
-              <li><a href="gr-des.html">Graphic Design</a></li>
-              <li><a href="dig-mar.html">Digital Marketing</a></li>
-              <li class="active"><a href="portfolio.html">Portfolio</a></li>
+              <li><a href="web-development.html">Web Development</a></li>
+              <li><a href="web-design.html">Web Design</a></li>
+              <li class="active"><a href="graphic-design.html">Graphic Design</a></li>
+              <li><a href="digital-marketing.html">Digital Marketing</a></li>
+              <li><a href="portfolio.html">Portfolio</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -64,135 +64,6 @@
     <!-- HEADER END --> 
 
     <!-- TODO: Here goes your content! -->
-    <section class="container port-sec-one hidden-xs">
-      <div class="row cl-ac">
-        <div class="col-sm-7 col-md-8">
-          <h2>Get a professional website at an affordable price.</h2>
-          <p>
-          Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
-          </p>
-        </div>
-        <div class="col-sm-5 col-md-4">
-          <a href="contact.html">Get a Quote</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="container port-sec-two">
-      <div class="row row-pr">
-        <div class="col-xs-12 col-sm-6 col-sm-push-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc">
-          <div>
-            <h3> Dolor debitis praesentium incidunt quae?  </h3>
-            <p>
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            </p>
-            <a href="#">Read more about this project</a>
-          </div>
-        </div>
-      </div>
-      <div class="row row-pr">
-        <div class="col-xs-12 col-md-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-6 pr-exc">
-          <h3> Dolor debitis praesentium incidunt quae?  </h3>
-          <p>
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          </p>
-          <a href="#">Read more about this project</a>
-        </div>
-      </div>
-      <div class="row row-pr">
-        <div class="col-xs-12 col-sm-6 col-sm-push-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc">
-          <div>
-            <h3> Dolor debitis praesentium incidunt quae?  </h3>
-            <p>
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-            </p>
-            <a href="#">Read more about this project</a>
-          </div>
-        </div>
-      </div>
-      <div class="row row-pr">
-        <div class="col-xs-12 col-md-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
-        </div>
-        <div class="col-xs-12 col-md-6 pr-exc">
-          <h3> Dolor debitis praesentium incidunt quae?  </h3>
-          <p>
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          Amet quis ut amet ex aliquam quod Harum aliquam fuga architecto mollitia omnis eligendi? Sequi delectus neque ex aperiam debitis.
-          </p>
-          <a href="#">Read more about this project</a>
-        </div>
-      </div>
-    </section>
-
-
-    <section class="container port-sec-three">
-      <div class="row">
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/web-development.png" alt="">
-          <h2>Web Development</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/web-dev.html">Learn more</a>
-        </div>
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/web-design.png" alt="">
-          <h2>Web Design</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/web-des.html">Learn more</a>
-        </div>
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/graphic-design.png" alt="">
-          <h2>Graphic Design</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/gr-des.html">Learn more</a>
-        </div>
-        <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/digital-marketing.png" alt="">
-          <h2>Digital Marketing</h2>
-          <p>
-          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
-          </p>
-          <a href="pages/dig-mar.html">Learn more</a>
-        </div>
-      </div>
-    </section>
-
-
-
-    <section class="port-sec-four">
-      <div class="container">
-        <div class="row cl-ac">
-          <div class="col-sm-7 col-md-8">
-            <h2>Get a professional website at an affordable price.</h2>
-            <p>
-            Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
-            </p>
-          </div>
-          <div class="col-sm-5 col-md-4">
-            <a href="contact.html">Get a Quote</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
 
     <!-- FOOTER --> 
     <footer>
