subpages links fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
     <!--[if lt IE 9]>
@@ -27,8 +27,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="hidden-xs navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="reachpeak logo"></a>
-          <a class="visible-xs navbar-brand" href="../index.html"><img src="../images/logo-sm.jpg" alt="reachpeak logo"></a>
+          <a class="hidden-xs navbar-brand" href="index.html"><img src="images/logo.jpg" alt="reachpeak logo"></a>
+          <a class="visible-xs navbar-brand" href="index.html"><img src="images/logo-sm.jpg" alt="reachpeak logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <div class="navbar-wrp  hidden-xs">
@@ -47,7 +47,7 @@
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
               <li><a href="web-development.html">Web Development</a></li>
-              <li><a href="web-design.html">Web Design</a></li>
+              <li><a href="web-designign.html">Web Design</a></li>
               <li><a href="graphic-design.html">Graphic Design</a></li>
               <li><a href="digital-marketing.html">Digital Marketing</a></li>
               <li class="active"><a href="portfolio.html">Portfolio</a></li>
@@ -81,7 +81,7 @@
     <section class="container port-sec-two">
       <div class="row row-pr">
         <div class="col-xs-12 col-sm-6 col-sm-push-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
+          <img class="img-responsive" src="images/portfolio-aeu.png" alt="">
         </div>
         <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc">
           <div>
@@ -96,7 +96,7 @@
       </div>
       <div class="row row-pr">
         <div class="col-xs-12 col-md-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
+          <img class="img-responsive" src="images/portfolio-aeu.png" alt="">
         </div>
         <div class="col-xs-12 col-md-6 pr-exc">
           <h3> Dolor debitis praesentium incidunt quae?  </h3>
@@ -109,7 +109,7 @@
       </div>
       <div class="row row-pr">
         <div class="col-xs-12 col-sm-6 col-sm-push-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
+          <img class="img-responsive" src="images/portfolio-aeu.png" alt="">
         </div>
         <div class="col-xs-12 col-sm-6 col-sm-pull-6 pr-exc">
           <div>
@@ -124,7 +124,7 @@
       </div>
       <div class="row row-pr">
         <div class="col-xs-12 col-md-6 text-center">
-          <img class="img-responsive" src="../images/portfolio-aeu.png" alt="">
+          <img class="img-responsive" src="images/portfolio-aeu.png" alt="">
         </div>
         <div class="col-xs-12 col-md-6 pr-exc">
           <h3> Dolor debitis praesentium incidunt quae?  </h3>
@@ -141,36 +141,36 @@
     <section class="container port-sec-three">
       <div class="row">
         <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/web-development.png" alt="">
+          <img src="images/web-development.png" alt="">
           <h2>Web Development</h2>
           <p>
           Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
           </p>
-          <a href="pages/web-dev.html">Learn more</a>
+          <a href="web-development.html">Learn more</a>
         </div>
         <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/web-design.png" alt="">
+          <img src="images/web-design.png" alt="">
           <h2>Web Design</h2>
           <p>
           Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
           </p>
-          <a href="pages/web-des.html">Learn more</a>
+          <a href="web-design.html">Learn more</a>
         </div>
         <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/graphic-design.png" alt="">
+          <img src="images/graphic-design.png" alt="">
           <h2>Graphic Design</h2>
           <p>
           Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
           </p>
-          <a href="pages/gr-des.html">Learn more</a>
+          <a href="graphic-design.html">Learn more</a>
         </div>
         <div class="text-center col-md-3 col-sm-6 col-xs-12">
-          <img src="../images/digital-marketing.png" alt="">
+          <img src="images/digital-marketing.png" alt="">
           <h2>Digital Marketing</h2>
           <p>
           Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
           </p>
-          <a href="pages/dig-mar.html">Learn more</a>
+          <a href="digital-marketing.html">Learn more</a>
         </div>
       </div>
     </section>
@@ -252,14 +252,14 @@
         </div>
         <hr>
         <p class="text-center">
-        Copyright © 2018 <a href="#" target="_blank" alt="" title=""><img style="width: 78px;" class="block-ceter" src="../images/reachpeak-footer.png">
+        Copyright © 2018 <a href="#" target="_blank" alt="" title=""><img style="width: 78px;" class="block-ceter" src="images/reachpeak-footer.png">
         </p>
       </div>
     </footer>
     <!-- FOOTER END --> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="../scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
 
