--- a/graphic-design.html
+++ b/graphic-design.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
     <!--[if lt IE 9]>
@@ -27,8 +27,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="hidden-xs navbar-brand" href="../index.html"><img src="../images/logo.jpg" alt="reachpeak logo"></a>
-          <a class="visible-xs navbar-brand" href="../index.html"><img src="../images/logo-sm.jpg" alt="reachpeak logo"></a>
+          <a class="hidden-xs navbar-brand" href="index.html"><img src="images/logo.jpg" alt="reachpeak logo"></a>
+          <a class="visible-xs navbar-brand" href="index.html"><img src="images/logo-sm.jpg" alt="reachpeak logo"></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <div class="navbar-wrp  hidden-xs">
@@ -123,14 +123,14 @@
         </div>
         <hr>
         <p class="text-center">
-        Copyright © 2018 <a href="#" target="_blank" alt="" title=""><img style="width: 78px;" class="block-ceter" src="../images/reachpeak-footer.png">
+        Copyright © 2018 <a href="#" target="_blank" alt="" title=""><img style="width: 78px;" class="block-ceter" src="images/reachpeak-footer.png">
         </p>
       </div>
     </footer>
     <!-- FOOTER END --> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="../scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
 
