--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
               <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
             <ul id="navbar-main" class="nav navbar-nav navbar-right">
-              <li><a href="pages/web-dev.html">Web Development</a></li>
-              <li><a href="pages/web-des.html">Web Design</a></li>
-              <li><a href="pages/gr-des.html">Graphic Design</a></li>
-              <li><a href="pages/dig-mar.html">Digital Marketing</a></li>
-              <li><a href="pages/port.html">Portfolio</a></li>
-              <li><a href="pages/about.html">About us</a></li>
-              <li><a href="pages/contact.html">Contact</a></li>
+              <li><a href="web-development.html">Web Development</a></li>
+              <li><a href="web-design.html">Web Design</a></li>
+              <li><a href="graphic-design.html">Graphic Design</a></li>
+              <li><a href="digital-marketing.html">Digital Marketing</a></li>
+              <li><a href="port.html">Portfolio</a></li>
+              <li><a href="about.html">About us</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -75,7 +75,7 @@
             <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
             </p>
-            <a href="pages/web-dev.html">Learn more</a>
+            <a href="web-development.html">Learn more</a>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <img src="images/web-design.png" alt="">
@@ -83,7 +83,7 @@
             <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
             </p>
-            <a href="pages/web-des.html">Learn more</a>
+            <a href="web-design.html">Learn more</a>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <img src="images/graphic-design.png" alt="">
@@ -91,7 +91,7 @@
             <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
             </p>
-            <a href="pages/gr-des.html">Learn more</a>
+            <a href="graphic-design.html">Learn more</a>
           </div>
           <div class="col-md-3 col-sm-6 col-xs-12">
             <img src="images/digital-marketing.png" alt="">
@@ -99,7 +99,7 @@
             <p>
             Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
             </p>
-            <a href="pages/dig-mar.html">Learn more</a>
+            <a href="digital-marketing.html">Learn more</a>
           </div>
         </div>
       </div>
