rest sections added to about subpage

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/owlcarousel/owl.carousel.css">
+    <link rel="stylesheet" href="css/owlcarousel/owl.theme.default.css">
     <link rel="stylesheet" href="css/index.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- Leave those next 4 lines if you care about users using IE8 -->
@@ -62,6 +64,196 @@
     <!-- HEADER --> 
     <div class="header-cont"></div>
     <!-- HEADER END --> 
+
+
+
+    <section class="container about-sec-one">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="text-center">
+            Collaboratively administrate empowered markets via networks. <span>Dynamically</span> proctinate stalled fits.
+          </h2>
+          <p class="text-center">
+          Adipisicing quam debitis aspernatur ullam nam sint? Eaque perspiciatis delectus tempora impedit quod temporibus Quasi aspernatur repellat voluptatibus debitis voluptates reiciendis expedita Quis ullam molestiae consequuntur error vitae Harum iusto officia facilis placeat porro. Aliquam beatae quasi exercitationem dolorem quod ipsa Hic nulla quos harum assumenda quaerat Hic magnam mollitia nostrum suscipit praesentium Vero pariatur eveniet atque natus qui obcaecati deserunt aut alias sapiente. Fuga iure blanditiis officiis accusantium modi ducimus Deserunt ullam accusantium consequatur eaque corrupti. Id eveniet doloremque quisquam ab exercitationem aliquam Atque eos temporibus labore adipisci voluptatem, accusamus cupiditate. Vel sapiente nostrum explicabo commodi magni. Officiis unde
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="container about-sec-two">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>Our Mission</h3>
+          <p>
+          Dolor voluptate eaque soluta quis error. Nobis nulla quae labore ex nulla a quisquam illum Sed cupiditate porro omnis rem numquam, earum maiores voluptatum quam? Ipsam nostrum nemo cum suscipit?
+          </p>
+          <ul class="mis-ul">
+            <li>
+              <i class="fas fa-check"></i>
+              Easy Installation & Setup Business
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+              Planning Fully Customizable Options
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+              Risk Management One Click Demo Content
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+              Auto Theme Updater For Easy Updates
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+              Financial Consultancy Retina Ready
+            </li>
+            <li>
+              <i class="fas fa-check"></i>
+              Retina Ready For Enabled Devices
+            </li>
+          </ul>
+        </div>
+        <div class="col-md-6">
+          <h3>What we do</h3>
+          <p>
+          Dolor voluptate eaque soluta quis error. Nobis nulla quae labore ex nulla a quisquam illum Sed cupiditate porro omnis rem numquam, earum maiores voluptatum quam? Ipsam nostrum nemo cum suscipit?
+          </p>
+          <img src="files/about-us-bars.jpg" alt="">
+        </div>
+      </div>
+    </section>
+    
+    <section class="port-sec-four">
+      <div class="st-wrp">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-3">
+              <p>Successfully Completed Projects</p>
+              <p>+40</p>
+            </div>
+            <div class="col-sm-3">
+              <p>Successfully Completed Projects</p>
+              <p>+40</p>
+            </div>
+            <div class="col-sm-3">
+              <p>Successfully Completed Projects</p>
+              <p>+40</p>
+            </div>
+            <div class="col-sm-3">
+              <p>Successfully Completed Projects</p>
+              <p>+40</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row cl-ac">
+          <div class="col-sm-7 col-md-8">
+            <h2>Get a professional website at an affordable price.</h2>
+            <p>
+            Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
+            </p>
+          </div>
+          <div class="col-sm-5 col-md-4">
+            <a href="contact.html">Get a Quote</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about-sec-four">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="sl-cont">
+              <div class="owl-carousel owl-tes owl-theme owl-about">
+                <div> 
+                  <p class="te-txt">
+                  1 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  </p>
+                  <span class="te-auth">jane doe</span>
+                  <span class="te-func">manager cork</span>
+                </div>
+                <div> 
+                  <p class="te-txt">
+                  2 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  </p>
+                  <span class="te-auth">jane doe</span>
+                  <span class="te-func">manager cork</span>
+                </div>
+                <div> 
+                  <p class="te-txt">
+                  3 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  </p>
+                  <span class="te-auth">jane doe</span>
+                  <span class="te-func">manager cork</span>
+                </div>
+                <div> 
+                  <p class="te-txt">
+                  4 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  </p>
+                  <span class="te-auth">jane doe</span>
+                  <span class="te-func">manager cork</span>
+                </div>
+                <div> 
+                  <p class="te-txt">
+                  5 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  </p>
+                  <span class="te-auth">jane doe</span>
+                  <span class="te-func">manager cork</span>
+                </div>
+                <div> 
+                  <p class="te-txt">
+                  6 Sit quia repudiandae eum qui tenetur? Enim officia aspernatur veritatis possimus lorem Voluptate consequatur quos veniam ut accusamus. Impedit minima vel nobis non doloremque Reprehenderit facere repellendus reprehenderit sapiente illo.
+                  </p>
+                  <span class="te-auth">jane doe</span>
+                  <span class="te-func">manager cork</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container about-sec-five">
+      <div class="row">
+        <div class="text-center col-md-3 col-sm-6 col-xs-12">
+          <img src="images/web-development.png" alt="">
+          <h2>Web Development</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="web-development.html">Learn more</a>
+        </div>
+        <div class="text-center col-md-3 col-sm-6 col-xs-12">
+          <img src="images/web-design.png" alt="">
+          <h2>Web Design</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="web-design.html">Learn more</a>
+        </div>
+        <div class="text-center col-md-3 col-sm-6 col-xs-12">
+          <img src="images/graphic-design.png" alt="">
+          <h2>Graphic Design</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="graphic-design.html">Learn more</a>
+        </div>
+        <div class="text-center col-md-3 col-sm-6 col-xs-12">
+          <img src="images/digital-marketing.png" alt="">
+          <h2>Digital Marketing</h2>
+          <p>
+          Lorem sit sunt quo a maxime? Mollitia doloribus iusto tempore ipsam molestias Explicabo voluptatibus blanditiis
+          </p>
+          <a href="digital-marketing.html">Learn more</a>
+        </div>
+      </div>
+    </section>
+
+
+
+
 
     <!-- TODO: Here goes your content! -->
 
@@ -130,7 +322,16 @@
     </footer>   <!-- FOOTER END --> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="scripts/owlcarousel/owl.carousel.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script>
+      $(document).ready(function(){
+        $(".owl-carousel.owl-tes").owlCarousel({
+          items: 1,
+          dots: true,
+        });
+      });
+    </script>
   </body>
 </html>
 
