about subpage sections renamed

--- a/about.html
+++ b/about.html
@@ -61,11 +61,10 @@
       </div>
     </nav>
     <!-- NAVBAR END -->
+
     <!-- HEADER --> 
     <div class="header-cont"></div>
     <!-- HEADER END --> 
-
-
 
     <section class="container about-sec-one">
       <div class="row">
@@ -122,8 +121,7 @@
         </div>
       </div>
     </section>
-    
-    <section class="port-sec-four">
+    <section class="about-sec-four">
       <div class="st-wrp">
         <div class="container">
           <div class="row">
@@ -160,7 +158,7 @@
         </div>
       </div>
     </section>
-    <section class="about-sec-four">
+    <section class="about-sec-five">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -214,7 +212,7 @@
         </div>
       </div>
     </section>
-    <section class="container about-sec-five">
+    <section class="container about-sec-six">
       <div class="row">
         <div class="text-center col-md-3 col-sm-6 col-xs-12">
           <img src="images/web-development.png" alt="">
@@ -250,12 +248,6 @@
         </div>
       </div>
     </section>
-
-
-
-
-
-    <!-- TODO: Here goes your content! -->
 
     <!-- FOOTER --> 
     <footer>
