final styles subpage about

--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
           <p>
           Dolor voluptate eaque soluta quis error. Nobis nulla quae labore ex nulla a quisquam illum Sed cupiditate porro omnis rem numquam, earum maiores voluptatum quam? Ipsam nostrum nemo cum suscipit?
           </p>
-          <img src="files/about-us-bars.jpg" alt="">
+          <img class="img-responsive" src="files/about-us-bars.jpg" alt="">
         </div>
       </div>
     </section>
@@ -146,13 +146,13 @@
       </div>
       <div class="container">
         <div class="row cl-ac">
-          <div class="col-sm-7 col-md-8">
+          <div class="col-sm-6 col-md-8">
             <h2>Get a professional website at an affordable price.</h2>
             <p>
             Sit nisi quidem quibusdam odio corrupti iste. Et veniam voluptatem laborum quas expedita pariatur est! Est ut voluptate labore minus saepe quae iusto alias! Voluptatum aspernatur illo ipsa odit illum ipsam? Quisquam assumenda nostrum rem fugit nemo voluptas, maiores deserunt optio nostrum. Nam porro totam molestias natus impedit voluptas Ullam
             </p>
           </div>
-          <div class="col-sm-5 col-md-4">
+          <div class="col-sm-6 col-md-4">
             <a href="contact.html">Get a Quote</a>
           </div>
         </div>
