contact us finished

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,89 @@
     <!-- HEADER END --> 
 
     <!-- TODO: Here goes your content! -->
+    <section class="container contact-sec-one">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="text-center">
+            Collaboratively administrate empowered markets via networks. <span>Dynamically</span> proctinate stalled fits.
+          </h2>
+        </div>
+      </div>
+    </section>
+    <section class="container contact-sec-two">
+      <div class="row">
+        <div class="col-md-5">
+        </div>
+        <div class="col-md-7">
+          <form>
+            <div class="form-group">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Full Name*">
+            </div>
+            <div class="form-group">
+              <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="E-mail*">
+            </div>
+            <div class="form-group">
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="8" placeholder="Query"></textarea>
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1"> <span>RODO</span> Ipsum delectus omnis rem commodi </label>
+              <a href="#" data-toggle="modal" data-target="#modal1" >read more</a>
+            </div>
+            <div class="form-check">
+              <input type="checkbox" class="form-check-input" id="exampleCheck1">
+              <label class="form-check-label" for="exampleCheck1"> <span>RODO</span> Ipsum delectus omnis rem commodi </label>
+              <a href="#" data-toggle="modal" data-target="#modal2" >read more</a>
+            </div>
+            <button type="submit" class="btn btn-default pull-right">Submit</button>
+          </form>
+        </div>
+      </div>
+    </section>
 
+    <!-- Button trigger modal -->
+    <!-- Modal1 -->
+    <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">RODO 1</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div>
+              Sit soluta distinctio perspiciatis sed facilis? Accusantium dolore aspernatur accusamus commodi esse? Nostrum sint nihil aspernatur architecto saepe? Officiis voluptate quasi laborum quasi ut? Illum error odit totam facilis numquam dolore Dolore molestias possimus sint omnis eos iure Quos minima accusantium quae quas non a. Fugit rem aut porro illo
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal2 -->
+    <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">RODO 2</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div>
+              Sit soluta distinctio perspiciatis sed facilis? Accusantium dolore aspernatur accusamus commodi esse? Nostrum sint nihil aspernatur architecto saepe? Officiis voluptate quasi laborum quasi ut? Illum error odit totam facilis numquam dolore Dolore molestias possimus sint omnis eos iure Quos minima accusantium quae quas non a. Fugit rem aut porro illo
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- FOOTER --> 
     <footer>
       <div class="container">
